kube/ingress/yoobi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yoobi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yoobi.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yoobi-frontend
                port:
                  number: 3000
